Add alt text to img tags.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="categories">
         <div class="reaction category">
           <div class="icon">
-            <img src="./assets/images/icon-reaction.svg">
+            <img src="./assets/images/icon-reaction.svg" alt="Reaction icon">
           </div>
           <div class="category-name">
             Reaction
@@ -54,7 +54,7 @@
         
         <div class="memory category">
           <div class="icon">
-            <img src="./assets/images/icon-memory.svg">
+            <img src="./assets/images/icon-memory.svg" alt="Memory icon">
           </div>
           <div class="category-name">
             Memory
@@ -67,7 +67,7 @@
 
         <div class="verbal category">
           <div class="icon">
-            <img src="./assets/images/icon-verbal.svg">
+            <img src="./assets/images/icon-verbal.svg" alt="Verbal icon"">
           </div>
           <div class="category-name">
             Verbal
@@ -80,7 +80,7 @@
 
         <div class="visual category">
           <div class="icon">
-            <img src="./assets/images/icon-visual.svg">
+            <img src="./assets/images/icon-visual.svg" alt="Visual icon">
           </div>
           <div class="category-name">
             Visual
