--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <main class="container">
     <div class="result-side">
       <div class="header result-header">
         Your Result
@@ -95,6 +95,6 @@
         Continue
       </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
